test/sema/struct_member_redeclared.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
    x: i32,
    x: i32,
    // CHECK: [[# @LINE - 1 ]]:5: error: member 'x' is already declared
}

fn main() -> void {
}